run spotless:apply